# esp_lwgsm

./: .gitmodules  CMakeLists.txt  Kconfig  esp_lwgsm.c
apps/: esp_lwgsm_sntp.c
config/: lwgsm_opts.h
include/: esp_lwgsm.h
include/apps/: esp_lwgsm_info.h  esp_lwgsm_sntp.h
test/: CMakeLists.txt  test_lwgsm_parser.c  test_lwgsm_sys.c
